--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "autogitpilot-backend",
+  "name": "automaxlib-backend",
   "version": "1.0.0",
-  "description": "Backend API for AutoGitPilot",
+  "description": "Backend API for AutoMaxLib",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -31,8 +31,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-slow-down": "^2.0.1",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
+    "express-mongo-sanitize": "^2.2.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
@@ -52,6 +55,6 @@
     "commits",
     "api"
   ],
-  "author": "AutoGitPilot",
+  "author": "AutoMaxLib",
   "license": "MIT"
 }
