--- a/backend/package.json
+++ b/backend/package.json
@@ -43,7 +43,13 @@
     "openai": "^4.20.1",
     "razorpay": "^2.9.2",
     "socket.io": "^4.8.1",
-    "xss": "^1.0.14"
+    "xss": "^1.0.14",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "ioredis": "^5.6.1",
+    "redis": "^5.6.1",
+    "node-cache": "^5.1.2",
+    "pm2": "^6.0.8"
   },
   "devDependencies": {
     "jest": "^29.7.0",
