fix: resolve CORS issue for production deployment
- Enhanced CORS configuration in server.js to properly use ALLOWED_ORIGINS env var
- Updated production environment to use correct automaxlib.online domains
- Fixed frontend URL configuration for production deployment
- This resolves the 'No Access-Control-Allow-Origin header' error

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -21,10 +21,10 @@ REDIS_PASSWORD=
 REDIS_DB=0
 
 # Authentication - Clerk (Production Keys)
-CLERK_SECRET_KEY=sk_live_your_production_clerk_secret_key
-CLERK_PUBLISHABLE_KEY=pk_live_your_production_clerk_publishable_key
-CLERK_WEBHOOK_SECRET=whsec_your_production_webhook_secret
-
+# Replace these with your actual Clerk production keys from dashboard
+CLERK_SECRET_KEY=sk_live_REPLACE_WITH_YOUR_ACTUAL_CLERK_SECRET_KEY
+CLERK_PUBLISHABLE_KEY=pk_live_REPLACE_WITH_YOUR_ACTUAL_CLERK_PUBLISHABLE_KEY
+CLERK_WEBHOOK_SECRET=whsec_REPLACE_WITH_YOUR_ACTUAL_WEBHOOK_SECRET
 # Payment Processing - Razorpay (Production Keys)
 RAZORPAY_KEY_ID=rzp_live_your_production_key
 RAZORPAY_KEY_SECRET=your_production_razorpay_secret
@@ -44,8 +44,8 @@ FROM_EMAIL=noreply@autogitpilot.com
 FROM_NAME=AutoGitPilot
 
 # Frontend Configuration
-FRONTEND_URL=https://autogitpilot.com
-ALLOWED_ORIGINS=https://autogitpilot.com,https://www.autogitpilot.com
+FRONTEND_URL=https://www.automaxlib.online
+ALLOWED_ORIGINS=https://www.automaxlib.online,https://automaxlib.online
 
 # GitHub Integration (Production)
 GITHUB_CLIENT_ID=your_production_github_client_id
