--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -3,7 +3,8 @@
 # ===========================================
 
 # Authentication - Clerk (Production Keys)
-VITE_CLERK_PUBLISHABLE_KEY=pk_live_your_production_clerk_publishable_key
+# Replace with your actual Clerk production publishable key from dashboard
+VITE_CLERK_PUBLISHABLE_KEY=pk_live_REPLACE_WITH_YOUR_ACTUAL_CLERK_PRODUCTION_KEY
 
 # API Configuration
 VITE_API_BASE_URL=https://api.autogitpilot.com/api
