--- a/backend/package.json
+++ b/backend/package.json
@@ -49,7 +49,8 @@
     "ioredis": "^5.6.1",
     "redis": "^5.6.1",
     "node-cache": "^5.1.2",
-    "pm2": "^6.0.8"
+    "pm2": "^6.0.8",
+    "svix": "^1.15.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
