fix: resolve dashboard 404 and authentication issues
- Add vercel.json for proper SPA routing on Vercel deployment
- Update frontend production environment with correct API URL (automaxlib.onrender.com)
- Fix social media links and canonical URL for automaxlib.online domain
- This resolves the 404 error when accessing /dashboard after Clerk authentication

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -7,7 +7,7 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_live_REPLACE_WITH_YOUR_ACTUAL_CLERK_PRODUCTION_KEY
 
 # API Configuration
-VITE_API_BASE_URL=https://api.autogitpilot.com/api
+VITE_API_BASE_URL=https://automaxlib.onrender.com/api
 VITE_API_TIMEOUT=30000
 
 # Payment Processing - Razorpay (Production Keys)
@@ -30,10 +30,10 @@ VITE_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
 VITE_HOTJAR_ID=
 
 # Social Media & SEO
-VITE_SOCIAL_TWITTER=@autogitpilot
-VITE_SOCIAL_GITHUB=https://github.com/autogitpilot
+VITE_SOCIAL_TWITTER=@automaxlib
+VITE_SOCIAL_GITHUB=https://github.com/Aniruddha434/AutoMaxLib
 VITE_SOCIAL_DISCORD=
-VITE_CANONICAL_URL=https://autogitpilot.com
+VITE_CANONICAL_URL=https://www.automaxlib.online
 
 # Performance & Caching
 VITE_ENABLE_SW=true
