fix: Add comprehensive Clerk webhook troubleshooting tools and documentation

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -22,12 +22,13 @@ REDIS_DB=0
 
 # Authentication - Clerk (Production Keys)
 # Replace these with your actual Clerk production keys from dashboard
-CLERK_SECRET_KEY=sk_live_Eqxzhh0to5joNn25N0LpWfWYUKBYj2iuQTc2v3eHAg
-CLERK_PUBLISHABLE_KEY=pk_live_Y2xlcmsuYXV0b21heGxpYi5vbmxpbmUk
+CLERK_SECRET_KEY=sk_live_YOUR_PRODUCTION_CLERK_SECRET_KEY
+CLERK_PUBLISHABLE_KEY=pk_live_YOUR_PRODUCTION_CLERK_PUBLISHABLE_KEY
 # CRITICAL: Set this to your actual Clerk webhook secret from the Clerk dashboard
 # Go to: Clerk Dashboard > Webhooks > Your Webhook > Signing Secret
 # REPLACE THE SECRET BELOW WITH THE ACTUAL SECRET FROM YOUR CLERK DASHBOARD
-CLERK_WEBHOOK_SECRET=whsec_ZBysbrLyJU3zrW7ud+20O3fccgyc54Ie
+# NOTE: This secret must match exactly what's configured in your Clerk Dashboard
+CLERK_WEBHOOK_SECRET=whsec_REPLACE_WITH_ACTUAL_SECRET_FROM_CLERK_DASHBOARD
 # Payment Processing - Razorpay (Production Keys)
 RAZORPAY_KEY_ID=rzp_live_your_production_key
 RAZORPAY_KEY_SECRET=your_production_razorpay_secret
