--- a/backend/package.json
+++ b/backend/package.json
@@ -31,27 +31,27 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
-    "express-slow-down": "^2.0.1",
+    "express-slow-down": "^2.1.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
-    "express-mongo-sanitize": "^2.2.0",
+    "ioredis": "^5.6.1",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "openai": "^4.20.1",
+    "pm2": "^6.0.8",
     "razorpay": "^2.9.2",
+    "redis": "^5.6.1",
     "socket.io": "^4.8.1",
-    "xss": "^1.0.14",
+    "svix": "^1.15.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "ioredis": "^5.6.1",
-    "redis": "^5.6.1",
-    "node-cache": "^5.1.2",
-    "pm2": "^6.0.8",
-    "svix": "^1.15.0"
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "jest": "^29.7.0",
