--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.0",
+    "@tabler/icons-react": "^3.34.1",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.294.0",
     "motion": "^12.23.12",
     "react": "^18.2.0",
