--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
     "tailwindcss-animate": "^1.0.7"
