--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,6 +34,7 @@ RAZORPAY_WEBHOOK_SECRET=
 # AI Services
 OPENAI_API_KEY=sk-your_openai_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
+OPENROUTER_API_KEY=sk-or-v1-your_openrouter_api_key_here
 
 # Email Configuration
 SMTP_HOST=smtp.gmail.com
