--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,6 +11,20 @@
   ],
   "routes": [
     {
+      "src": "/favicon.ico",
+      "headers": {
+        "content-type": "image/x-icon",
+        "cache-control": "public, max-age=86400"
+      }
+    },
+    {
+      "src": "/favicon.svg",
+      "headers": {
+        "content-type": "image/svg+xml",
+        "cache-control": "public, max-age=86400"
+      }
+    },
+    {
       "src": "/assets/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
