--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -11,6 +11,20 @@
   ],
   "routes": [
     {
+      "src": "/sitemap.xml",
+      "headers": {
+        "content-type": "application/xml",
+        "cache-control": "public, max-age=86400"
+      }
+    },
+    {
+      "src": "/robots.txt",
+      "headers": {
+        "content-type": "text/plain",
+        "cache-control": "public, max-age=86400"
+      }
+    },
+    {
       "src": "/favicon.ico",
       "headers": {
         "content-type": "image/x-icon",
@@ -31,7 +45,7 @@
       }
     },
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot))",
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|xml|txt))",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       }
