--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.294.0",
+    "mermaid": "^11.9.0",
     "motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
