chore(assets): Cache-bust feature images by appending ?v= and document VITE_ASSETS_VERSION in .env.example

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -17,6 +17,9 @@ VITE_APP_NAME=AutoMaxLib
 VITE_APP_VERSION=1.0.0
 VITE_APP_DESCRIPTION=Automate your GitHub commits and maintain your contribution streak
 
+# Static assets cache-busting: bump this when you update images in public/
+VITE_ASSETS_VERSION=1
+
 # Feature Flags
 VITE_ENABLE_PAYMENTS=true
 VITE_ENABLE_AI_FEATURES=true
